Navbar added along with some placeholders links for some new pages

--- a/index.html
+++ b/index.html
@@ -5,9 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ronni's Reusable Codebase</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
 	<!-- <script src="index.js"></script> -->
+    <!-- Navigation Bar -->
+    <div class="navbar">
+        <h2>Ronni's Reusable Codebase</h2>
+        <div class="navbarPages">
+            <a href="#other">Other</a>
+            <div class="dropdown"> 
+                <button class="dropbtn">Web Components</button>
+                <div class="dropdown-content">
+                    <a href="#">Galleries</a>
+                    <a href="#">Modals</a>
+                    <a href="#">Sliders</a>
+                    <a href="#">Animations</a>
+                </div>
+            </div> 
+            <a href="#home">Home</a>
+        </div>
+    </div>
+
+    <!-- Homepage Content -->
+    <div class="homeContent">
+        <h1>Ronni's Reusable Codebase</h1>
+    </div>
+
+    <!-- Footer -->
+    
   </body>
 </html>
